package pt.ipp.isep.dei.domain.auth;

public class Permission {
}
